--- a/style.css
+++ b/style.css
@@ -457,8 +457,8 @@ main{
 
 .navbar-link{
     color: var(--light-gray);
-    font-size: var(--fs-5);
-    padding: 20px 7px;
+    font-size: var(--fs-8);
+    padding: 20px 5px;
     transition: color var(--transition-1);
 }
 
@@ -707,46 +707,11 @@ main{
     font-weight: var(--fw-300);
     line-height: 1.6;
   }
-  
-  /* client */
-
-  .clients{
-    margin-bottom: 15px;
-  }
-
-  .clients-list{
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 15px;
-    margin: 0 -15px;
-    padding: 25px;
-    padding-bottom: 25px;
-    overflow-x: auto;
-    overscroll-behavior-inline: contain;
-    scroll-snap-type: inline mandatory;
-    scroll-padding-inline: 25px;
-  }
-
-  .clients-items{
-    min-width: 50%;
-    scroll-snap-align: start;
-  }
-
-  .clients-items img{
-    width: 100%;
-    filter: grayscale(1);
-    transition: var(--transition-1);
-  }
-
-  .clients-items img:hover{
-    filter: grayscale(0);
-  }
 
   /* resume */
 
   .article-title{
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
 
   .timeline{
@@ -953,7 +918,7 @@ main{
  .project-img{
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 100%;
   border-radius: 16px;
   overflow: hidden;
   margin-bottom: 15px;
@@ -1152,18 +1117,61 @@ main{
 
  /* responsive */
 
+ @media (min-width: 283px) {
+  .navbar-link {
+    color: var(--light-gray);
+    font-size: var(--fs-8);
+    padding: 20px 7px;
+    transition: color var(--transition-1);
+  }
+ }
+
+ @media (min-width: 318px) {
+  .navbar-list {
+    gap: 4px;
+  }
+
+  .navbar-link {
+    color: var(--light-gray);
+    font-size: var(--fs-7);
+    padding: 20px 5px;
+    transition: color var(--transition-1);
+  }
+ }
+
+ @media (min-width: 381px) {
+  .navbar-list {
+    gap: 10px;
+  }
+
+  .navbar-link {
+    color: var(--light-gray);
+    font-size: var(--fs-6);
+    padding: 20px 7px;
+    transition: color var(--transition-1);
+  }
+ }
+
  /* larger then 450px seceen */
 
- @media (min-width: 450px) {
 
-  .clients-items{
-    min-width: calc(33.33% - 10px);
-  }
+ @media (min-width: 450px) {
 
   .article-title {
     margin-top: 10px;
   }
 
+  .navbar-list {
+    gap: 20px;
+  }
+
+  .navbar-link {
+    color: var(--light-gray);
+    font-size: var(--fs-5);
+    padding: 20px 7px;
+    transition: color var(--transition-1);
+    -fs-7:14px;
+  }
  }
 
  /* larger then 580px */
@@ -1275,7 +1283,11 @@ main{
     gap: 20px;
   }
 
-  .navbar-link{
+  .navbar-link {
+    color: var(--light-gray);
+    font-size: var(--fs-5);
+    padding: 20px 7px;
+    transition: color var(--transition-1);
     -fs-7:14px;
   }
 
@@ -1372,17 +1384,6 @@ main{
     display: flex;
     flex-grow: 1;
     width: 35px;
-  }
-
-  .clients-list{
-    gap: 50px;
-    margin: 0 -30px;
-    padding: 45px;
-    scroll-padding-inline: 45px;
-  }
-
-  .clients-items{
-    min-width: calc(33.33% - 35px);
   }
 
   .timeline-list{
@@ -1560,12 +1561,8 @@ main{
     min-width: calc(50% - 15px);
   }
 
-  .clients-items{
-    min-width: calc(25% - 38px);
-  }
-
   .project-list{
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
